<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:fillViewport="true"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <Button
            android:id="@+id/GenerateEventButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="#67E084"
            android:text="Create Event"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterUploadArea" />

        <ImageButton
            android:id="@+id/Back_Button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/Back_Button"
            app:layout_constraintTop_toTopOf="@id/Back_Button" />

        <!-- Name Event -->
        <TextView
            android:id="@+id/lblNameEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name Event"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/Back_Button"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etEventName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="Title"
            android:textColorHint="@color/yellow"
            android:background="@drawable/gold_border_rounded"
            android:padding="12dp"
            android:textColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/lblNameEvent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Description -->
        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Description"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEventName" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:background="@drawable/gold_border_rounded"
            android:gravity="top"
            android:hint="Description"
            android:textColorHint="@color/yellow"
            android:textColor="@color/yellow"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblDescription" />

        <!-- Registration Period -->
        <TextView
            android:id="@+id/lblRegPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Registration Period"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="Start (MM/DD/YYYY)"
            android:inputType="none"
            android:focusable="false"
            android:textColorHint="@color/yellow"
            android:clickable="true"
            android:cursorVisible="false"
            android:background="@drawable/gold_border_rounded"
            android:padding="10dp"
            android:textColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/lblRegPeriod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etEndDate"
            app:layout_constraintHorizontal_weight="1" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="End (MM/DD/YYYY)"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:textColorHint="@color/yellow"
            android:cursorVisible="false"
            android:background="@drawable/gold_border_rounded"
            android:padding="10dp"
            android:textColor="@color/yellow"
            app:layout_constraintStart_toEndOf="@id/etStartDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etStartDate"
            app:layout_constraintHorizontal_weight="1" />

        <!-- Location -->
        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set Location"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etStartDate"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="Location"
            android:textColorHint="@color/yellow"
            android:background="@drawable/gold_border_rounded"
            android:padding="12dp"
            android:textColor="@color/yellow"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@id/lblLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/geolocationContainer"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:id="@+id/geolocationContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gold_border_rounded"
            app:layout_constraintTop_toTopOf="@id/lblLocation"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Geolocation"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="4dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchGeolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:scaleX="1.2"
                android:scaleY="1.2" />

            <TextView
                android:id="@+id/tvGeolocationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OFF"
                android:textColor="#F44336"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
        <!-- Limit Guests -->
        <TextView
            android:id="@+id/lblLimitGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limit Guests"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginTop="8dp"/>

        <EditText
            android:id="@+id/etLimitGuests"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="Limit Size"
            android:inputType="number"
            android:textColorHint="@color/yellow"
            android:textColor="@color/yellow"
            android:background="@drawable/gold_border_rounded"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/lblLimitGuests"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/lblWaitingListLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limit Waiting List"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etLimitGuests"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etWaitingListLimit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:hint="Limit Size"
            android:inputType="number"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow"
            android:background="@drawable/gold_border_rounded"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/lblWaitingListLimit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <!-- Upload Poster -->
        <TextView
            android:id="@+id/lblPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Event Poster (Optional)"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etWaitingListLimit"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/posterUploadArea"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/gold_border_rounded"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/lblPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/eventPosterPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/upload"
                android:background="@drawable/gold_border_rounded"/>


        </FrameLayout>

        <!-- Submit Button -->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
