...
        app:layout_constraintTop_toBottomOf="@id/goldDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- CREATE EVENT -->
        <Button
            android:id="@+id/CreateEventButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create Event"
            android:textColor="#000000"
            android:backgroundTint="#D4AF37"
...
