...
        android:background="@drawable/gold_border_rounded"
        android:textColor="@color/yellow"
        android:layout_marginTop="8dp"/>

    <!-- Draw replacement -->
    <Button
        android:id="@+id/btnDrawOneReplacement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Draw Replacement"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
...
